home-cluster/home-assistant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    kubernetes.io/metadata.name: home-assistant
