home-cluster/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    alert-on-down: "true"
  annotations:
    configmap.reloader.stakater.com/reload: "home-assistant-config"
spec:
  strategy:
    type: Recreate
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
      annotations:
        container.apparmor.security.beta.kubernetes.io/matter-server: unconfined
        container.apparmor.security.beta.kubernetes.io/home-assistant: unconfined
    spec:
      imagePullSecrets:
        - name: docker-registry-auth
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:2026.9.4
          resources:
            requests:
              memory: 896Mi
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config
            - name: dbus
              mountPath: /run/dbus
            - name: bluetooth
              mountPath: /sys/class/bluetooth
            - name: dev
              mountPath: /dev
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - CAP_NET_ADMIN
                - CAP_NET_RAW
        - name: matter-server
          image: ghcr.io/home-assistant-libs/python-matter-server:6.6.1
          resources:
            requests:
              memory: 128Mi
          ports:
            - containerPort: 5580
          command: ["python", "-m", "matter_server.server", "--log-level", "debug"]
          volumeMounts:
            - name: matter-data
              mountPath: /data
            - name: dbus
              mountPath: /run/dbus
            - name: bluetooth
              mountPath: /sys/class/bluetooth
            - name: dev
              mountPath: /dev
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - CAP_NET_ADMIN
                - CAP_NET_RAW
                - CAP_SYS_ADMIN
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-pvc
        - name: init-config
          configMap:
            name: home-assistant-config
        - name: matter-data
          persistentVolumeClaim:
            claimName: matter-server-pvc
        - name: dbus
          hostPath:
            path: /run/dbus
        - name: bluetooth
          hostPath:
            path: /sys/class/bluetooth
        - name: dev
          hostPath:
            path: /dev
